[gd_scene load_steps=2 format=3 uid="uid://cqyu6r7ksxtxr"]

[ext_resource type="Script" uid="uid://cisdjqfhc7e2c" path="res://Scripts/joinMenu.gd" id="1_7be0v"]

[node name="JoinMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7be0v")

[node name="name" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 344.0
offset_top = 353.0
offset_right = 519.0
offset_bottom = 384.0
placeholder_text = "Your Name"

[node name="roomCode" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 383.0
offset_top = 393.0
offset_right = 497.0
offset_bottom = 424.0
placeholder_text = "Room Code"

[node name="Host" type="Button" parent="."]
layout_mode = 0
offset_left = 407.0
offset_top = 439.0
offset_right = 450.0
offset_bottom = 470.0
text = "host"

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 414.0
offset_top = 482.0
offset_right = 452.0
offset_bottom = 513.0
text = "Join"

[connection signal="text_changed" from="name" to="." method="_on_name_text_changed"]
[connection signal="text_changed" from="roomCode" to="." method="_on_room_code_text_changed"]
[connection signal="pressed" from="Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="Join" to="." method="_on_join_pressed"]
